# PyWeb_HW_8

./: add_in_db.py  config.ini  connect_db.py  consumer.py  main.py  models.py  parser.py  producer.py  pyproject.toml  quotes.json
MangoDB/: pyproject.toml
sender_mail/database/: models.py
